# osx-overlay

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md
.zed/: tasks.json
docs/: logo.utf8.ans
include/: Color.hpp  cocoa_bridge.h
src/: Ansi.swift  Color.cpp  Color.swift  Config.swift  DrawCmd.swift  FileWatcher.swift  Gui.swift  IntPair.swift  Line.swift  OverlayCanvas.swift  OverlayWindow.swift  cocoa_bridge.cpp  main.cpp  main.mm  main.swift
